fix: adjust spacing

--- a/blocks/components/toggle/style.scss
+++ b/blocks/components/toggle/style.scss
@@ -10,7 +10,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 5px;
+        margin: 3px;
         cursor: pointer;
     }
 }
